# systemd-gtk

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: resources.gresource.xml  shortcuts.xml  style.css  window.ui  window.xml
src/: main.rs
src/systemd/: imp.rs  mod.rs
src/systemd/unit/: imp.rs  mod.rs
src/table/: mod.rs
src/window/: imp.rs  mod.rs
