[package]
name = "systemd-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["gnome_44"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
async-channel = { version = "2.3", features = [] }
systemctl = { git = "https://github.com/Journeycorner/systemctl", branch = "main", features = [] }
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
glib-build-tools = "0.20.0"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "symbols"
